Roukopool: Fixes menu and footer boxes padding on smaller screen

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -54,8 +54,11 @@ img.media-object
 
 .footer .panel-body
  background-color: #f6f6f6
- min-height: 215px
+ min-height: 205px
  padding-top: 5px
+
+ @media screen and (max-width: 640px)
+  min-height: 100px !important
 
 .credits
  color: white
@@ -77,8 +80,14 @@ img.media-object
 .pl-15
  padding-left: pl_15 !important
 
+ @media screen and (max-width: 640px)
+  padding-left: 8px !important
+
 .pr_15
  padding-right: pr_15 !important
+
+ @media screen and (max-width: 640px)
+  padding-right: 8px !important
 
 // Navigation
 
